Apartado CV acabado

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       rel="icon"
       type="image/png"
       href="assets/img/xena.png"
-    /> <!-- FALTA -->
+    />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/reset.css">
@@ -38,14 +38,14 @@
 
         <h2 class="logo">
             <a class="logo_a" href="./">
-            <img class="icon-x2" src="assets/img/xena.svg" alt="xena" /> <!-- FALTA -->
+            <img class="icon-x2" src="assets/img/xena.svg" alt="xena" />
             <span>rafacalventeweb</span>
             </a>
         </h2>
 
         <nav class="nav">
             <a href="./proyectos"> Proyectos </a>
-            <a href="./cv"> CV </a>
+            <a href="cv/cv.html"> CV </a>
             <a href="./ahora"> Ahora </a>
             <a href="./notas"> Notas </a>
         </nav>
@@ -58,7 +58,7 @@
         <article>
             <h2>Hola, aquí encontrarás toda mi información</h2>
             <h1>Soy Rafa Calvente</h1>
-            <img src="./assets/img/me.jpg" alt="">
+            <img src="./assets/img/me.jpg" alt="Foto retrato Rafa Calvente">
         </article>
     </section>
 
