Apartado Proyectos finalizado

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </h2>
 
         <nav class="nav">
-            <a href="./proyectos"> Proyectos </a>
+            <a href="proyectos/proyectos.html"> Proyectos </a>
             <a href="cv/cv.html"> CV </a>
             <a href="./ahora"> Ahora </a>
             <a href="./notas"> Notas </a>
