--- a/cv/cv.html
+++ b/cv/cv.html
@@ -43,8 +43,8 @@
         </h2>
 
         <nav class="nav">
-            <a href="./proyectos"> Proyectos </a>
-            <a href="./cv"> CV </a>
+            <a href="../proyectos/proyectos.html"> Proyectos </a>
+            <a href="#"> CV </a>
             <a href="./ahora"> Ahora </a>
             <a href="./notas"> Notas </a>
         </nav>
