Apartado Ahora finalizado

--- a/cv/cv.html
+++ b/cv/cv.html
@@ -45,8 +45,8 @@
         <nav class="nav">
             <a href="../proyectos/proyectos.html"> Proyectos </a>
             <a href="#"> CV </a>
-            <a href="./ahora"> Ahora </a>
-            <a href="./notas"> Notas </a>
+            <a href="../ahora/ahora.html"> Ahora </a>
+            <a href="./notas"> Contáctame </a>
         </nav>
 
     </header>
@@ -63,7 +63,6 @@
             <a href="#tecnologias" title="tecnologías">💻</a>
             <a href="#intereses" title="intereses">🏃&zwj;♂️</a>
             <a href="#experiencia-profesional" title="experiencia profesional">👨&zwj;💻</a>
-            <a href="#docencia" title="experiencia docente">👨&zwj;🏫</a>
       </nav>
     </section>
 
