--- a/proyectos/proyectos.html
+++ b/proyectos/proyectos.html
@@ -41,7 +41,7 @@
             <a href="#"> Proyectos </a>
             <a href="../cv/cv.html"> CV </a>
             <a href="../ahora/ahora.html"> Ahora </a>
-            <a href="../notas/notas.html"> Notas </a>
+            <a href="../contacto/contacto.html"> Contáctame </a>
         </nav>
 
     </header>
