--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         <nav class="nav">
             <a href="proyectos/proyectos.html"> Proyectos </a>
             <a href="cv/cv.html"> CV </a>
-            <a href="./ahora"> Ahora </a>
-            <a href="./notas"> Notas </a>
+            <a href="ahora/ahora.html"> Ahora </a>
+            <a href="./contacto/contacto.html"> Contáctame </a>
         </nav>
 
     </header>
