Finalizado, faltan solo algunos retoques de optimización, SEO y rendimiento

--- a/ahora/ahora.html
+++ b/ahora/ahora.html
@@ -32,7 +32,7 @@
     <header class="header">
 
         <h2 class="logo">
-            <a class="logo_a" href="./">
+            <a class="logo_a" href="../index.html">
                 <img class="icon-x2" src="../assets/img/xena.svg" alt="xena" />
                 <span>rafacalventeweb</span>
             </a>
@@ -55,7 +55,7 @@
             ¿Qué hago ahora mismo?
         </h1>
         <aside class="section section-ahora">
-            <img src="../assets/img/xena-background.jpeg" alt="¿Qué estoy haciendo ahora mismo?" loading="lazy">
+            <img  class="container" src="../assets/img/ahora.jpg" alt="¿Qué estoy haciendo ahora mismo?" loading="lazy">
             <p>
                 He de decir que aprecio mucho mi calidad de vida. Respeto mi tiempo y
                 el de los demás.
@@ -78,7 +78,7 @@
 
         <aside class="section section-2-ahora">
             <h3>Actualmente enfocado en:</h3>
-            <ol id="now-list" class="dark-box">
+            <ol>
                 <li>Desarrollo web en <i><a href="https://webimpacto.agency/">WebImpacto</a></i>.</li>
                 <li>Grado en Ingeniería Informática.</li>
                 <li class="fluid-1">Desarrollo de Proyecto para <a href="http://www.millanchiclana.com/" target="_blank"
