--- a/index.html
+++ b/index.html
@@ -47,12 +47,11 @@
             <a href="proyectos/proyectos.html"> Proyectos </a>
             <a href="cv/cv.html"> CV </a>
             <a href="ahora/ahora.html"> Ahora </a>
-            <a href="./contacto/contacto.html"> Contáctame </a>
+            <a href="contacto/contacto.html"> Contáctame </a>
         </nav>
 
     </header>
 
-    
     
     <section class="hello">
         <article>
