añado _blank a pdf de cv

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <br>
                 En este portafolio podrás encontrar todos mis proyectos personales desarrollados hasta el momento, en los cuales he practicado tecnologías como
                 <i>HTML, CSS, Vanilla JavaScript, ReactJS, Bootstrap</i> en el <span>Front-End</span> y <i>PHP, Laravel, Symfony, NodeJs y Python</i> para el <span>Back-End</span>.
-                Para más información profesional descarga mi <a href="assets/rafacalvente-cv.pdf" class="cv-presentation">CV</a>.
+                Para más información profesional descarga mi <a href="assets/rafacalvente-cv.pdf" target="_blank" class="cv-presentation">CV</a>.
             </h4>
     </section>
 
