--- a/cv/cv.html
+++ b/cv/cv.html
@@ -71,7 +71,7 @@
             <img src="../assets/img/me.jpg" alt="Foto retrato Rafa Calvente">
             <h1>Rafa Calvente</h1>
             <p class="text-center">Estudiante de Ingerniería Informática y Programador <i>Web</i></p>
-            <a href="./rafacalventeweb-cv.pdf" target="_blank" rel="noopener">versión 🖨️ impresa</a>
+            <a href="../assets/rafacalvente-cv.pdf" target="_blank" rel="noopener">versión 🖨️ impresa</a>
         </article>
     </section>
 
@@ -82,14 +82,14 @@
             <li>Nací en España. Febrero 23, 1997</li>
             <li>Vivo en Chiclana de la Fra, Cádiz</li>
             <li class="li-small">rafaelrodriguezcalvente@gmail.com</li>
-            <li><a href="/">rafacalventeweb.com</a></li>
+            <li><a href="/">rafacalventeweb.es</a></li>
         </ul>
     </article>
 
     <article id="acerca" class="cv-about section">
         <h2>acerca</h2>
         <p>
-            A raíz del confinamiento vivido durante los meses de Marzo y Mayo en España, fue por ello que comencé a realizar cursos en el área del desarrollo <i>web</i> y posteriormente proyectos personales para poner mis conocimientos en práctica. 
+            A raíz del confinamiento vivido durante los meses de Marzo y Mayo de 2020 en España, fue por ello que comencé a realizar cursos en el área del desarrollo <i>web</i> y posteriormente proyectos personales para poner mis conocimientos en práctica. 
         </p>
         <p>
             Estoy más orientado al <i>Frontend</i>, pero
@@ -113,9 +113,6 @@
               2015, Bachillerato científico-tecnológico en
               <a href="https://www.iespicasso.com/" target="_blank" rel="noopener">IES Pablo Ruíz Picasso</a>
           </li>
-          <li>
-            2015, Carnets A2 y B
-        </li>
           <li>
             2014, Grado Profesional de Música, especialidad en Viola en 
             <a href="https://conservatoriomanueldefalla.es/" target="_blank" rel="noopener">Real Conservatorio Profesional de Música</a>
