--- a/proyectos/proyectos.html
+++ b/proyectos/proyectos.html
@@ -63,9 +63,9 @@
 
     <section class="projects-list">
         <article class="project">
-            <a class="box-shadow-none" href="https://www.youtube.com/playlist?list=PLvq-jIkSeTUZ6QgYYO3MwG9EMqC-KoLXA"
+            <a href="https://github.com/rafarc97/PHP-LARAVEL-SYMFONY/tree/master/LARAVEL/PROJECTS/instagramAppLaravel"
                 target="_blank" rel="noopener">
-                <img src="../assets/img/instafoto.png"                    alt="Instafoto App" loading="lazy" class="img-project">
+                <img src="../assets/img/instafoto.png" alt="Instafoto App" loading="lazy" class="img-project">
             </a>
             <div>
                 <h3>InstaFoto</h3>
@@ -74,7 +74,7 @@
                 </p>
 
                 <p class="text-right">
-                    <a href="https://github.com/jonmircha/youtube-js" target="_blank" rel="noopener">
+                    <a href="https://github.com/rafarc97/PHP-LARAVEL-SYMFONY/tree/master/LARAVEL/PROJECTS/instagramAppLaravel" target="_blank" rel="noopener">
                         Códigos del proyecto
                     </a>
                 </p>
@@ -82,7 +82,7 @@
             </div>
         </article>
         <article class="project">
-            <a href="https://www.youtube.com/playlist?list=PLvq-jIkSeTUZ6QgYYO3MwG9EMqC-KoLXA"
+            <a href="https://github.com/rafarc97/PHP-LARAVEL-SYMFONY/tree/master/NATIVE-PHP/PROJECTS/TiendaCamisetasPHP"
                 target="_blank" rel="noopener">
                 <img src="../assets/img/tienda.png"
                     alt="Tienda Online" loading="lazy" class="img-project">
@@ -91,14 +91,14 @@
                 <h3>Tienda Online</h3>
                 <p>Tienda Online Virtual hecha con <i>PHP nativo</i> y <i>MySQL</i> para las <i>BBDD</i>.</p>
                 <p class="text-right">
-                    <a href="https://github.com/jonmircha/youtube-js" target="_blank" rel="noopener">
+                    <a href="https://github.com/rafarc97/PHP-LARAVEL-SYMFONY/tree/master/NATIVE-PHP/PROJECTS/TiendaCamisetasPHP" target="_blank" rel="noopener">
                         Códigos del proyecto
                     </a>
                 </p>
             </div>
         </article>
         <article class="project">
-            <a href=""
+            <a href="https://github.com/rafarc97/PHP-LARAVEL-SYMFONY/tree/master/NATIVE-PHP/PROJECTS/Blog"
                 target="_blank" rel="noopener">
                 <img src="../assets/img/blogvideojuegos.png"
                     alt="Blog Videojuegos" loading="lazy" class="img-project">
@@ -107,7 +107,7 @@
                 <h3>Blog Videojuegos</h3>
                 <p>Blog de videojuegos en <i>PHP nativo</i></I> para compartir tus publicaciones con tus amigos. <i>MySQL</i> para las <i>BBDD</i></p>
                 <p class="text-right">
-                    <a href="" target="_blank" rel="noopener">
+                    <a href="https://github.com/rafarc97/PHP-LARAVEL-SYMFONY/tree/master/NATIVE-PHP/PROJECTS/Blog" target="_blank" rel="noopener">
                         Códigos del proyecto
                     </a>
                 </p>
@@ -115,7 +115,7 @@
         </article>
 
         <article class="project">
-            <a href="https://www.youtube.com/playlist?list=PLvq-jIkSeTUZ6QgYYO3MwG9EMqC-KoLXA"
+            <a href="https://github.com/rafarc97/JavaScript/tree/master/Projects/CDC"
                 target="_blank" rel="noopener">
                 <img src="../assets/img/cdc.png"
                     alt="Club Deportivo Chiclanero" loading="lazy" class="img-project">
@@ -124,7 +124,7 @@
                 <h3>Club Deportivo Chiclanero</h3>
                 <p>Maquetación inicial hecha en HTML, CSS y el Framework Bootstrap la cual desarrollé como idea inicial para la actual página web del Club Deportivo Chiclanero.</p>
                 <p class="text-right">
-                    <a href="" target="_blank" rel="noopener">
+                    <a href="https://github.com/rafarc97/JavaScript/tree/master/Projects/CDC" target="_blank" rel="noopener">
                         Códigos del proyecto
                     </a>
                 </p>
@@ -132,7 +132,7 @@
         </article>
 
         <article class="project">
-            <a href="https://www.youtube.com/playlist?list=PLvq-jIkSeTUZ6QgYYO3MwG9EMqC-KoLXA"
+            <a href="https://github.com/rafarc97/ReactJS/tree/master/Administrador%20de%20Pacientes"
                 target="_blank" rel="noopener">
                 <img src="../assets/img/adminpacientes.png"
                     alt="Administrador de Pacientes" loading="lazy" class="img-project">
@@ -141,14 +141,14 @@
                 <h3>Aministrador de Pacientes</h3>
                 <p>Aplicación en <i>ReactJS</i> para poder administrar las citas de tus pacientes.</p>
                 <p class="text-right">
-                    <a href="" target="_blank" rel="noopener">
+                    <a href="https://github.com/rafarc97/ReactJS/tree/master/Administrador%20de%20Pacientes" target="_blank" rel="noopener">
                         Códigos del proyecto
                     </a>
                 </p>
             </div>
         </article>
         <article class="project">
-            <a href="https://www.youtube.com/playlist?list=PLvq-jIkSeTUZ6QgYYO3MwG9EMqC-KoLXA"
+            <a href="https://github.com/rafarc97/ReactJS/tree/master/Clima"
                 target="_blank" rel="noopener">
                 <img src="../assets/img/apitiempo.png"
                     alt="El tiempo" loading="lazy" class="img-project">
@@ -157,7 +157,7 @@
                 <h3>El Tiempo</h3>
                 <p>Aplicación en <i>ReactJS</i> que consume una API para obtener el tiempo.</p>
                 <p class="text-right">
-                    <a href="" target="_blank" rel="noopener">
+                    <a href="https://github.com/rafarc97/ReactJS/tree/master/Clima" target="_blank" rel="noopener">
                         Códigos del proyecto
                     </a>
                 </p>
@@ -165,7 +165,7 @@
         </article>
 
         <article class="project">
-            <a href="https://www.youtube.com/playlist?list=PLvq-jIkSeTUZ6QgYYO3MwG9EMqC-KoLXA"
+            <a href="https://github.com/rafarc97/ReactJS/tree/master/Administrador%20Gasto%20Semanal"
                 target="_blank" rel="noopener">
                 <img src="../assets/img/gastosemanal.png"
                     alt="Gasto Semanal" loading="lazy" class="img-project">
@@ -174,7 +174,7 @@
                 <h3>Gasto Semanal</h3>
                 <p>Aplicación en <i>ReactJS</i> para poder guardar tus gastos semanales y administrar tus compras mucho mejor.</p>
                 <p class="text-right">
-                    <a href="" target="_blank" rel="noopener">
+                    <a href="https://github.com/rafarc97/ReactJS/tree/master/Administrador%20Gasto%20Semanal" target="_blank" rel="noopener">
                         Códigos del proyecto
                     </a>
                 </p>
@@ -182,7 +182,7 @@
         </article>
 
         <article class="project">
-            <a href="https://www.youtube.com/playlist?list=PLvq-jIkSeTUZ6QgYYO3MwG9EMqC-KoLXA"
+            <a href="https://github.com/rafarc97/ReactJS/tree/master/Cotizador%20de%20Seguros"
                 target="_blank" rel="noopener">
                 <img src="../assets/img/cotizador.png"
                     alt="Cotizador Seguros" loading="lazy" class="img-project">
@@ -191,7 +191,7 @@
                 <h3>Cotizador Seguros</h3>
                 <p>Aplicación en <i>ReactJS</i> para calcular los diferentes precios sel seguro de tuc coche en función de distintas variables.</p>
                 <p class="text-right">
-                    <a href="" target="_blank" rel="noopener">
+                    <a href="https://github.com/rafarc97/ReactJS/tree/master/Cotizador%20de%20Seguros" target="_blank" rel="noopener">
                         Códigos del proyecto
                     </a>
                 </p>
@@ -199,7 +199,7 @@
         </article>
 
         <article class="project">
-            <a href="https://www.youtube.com/playlist?list=PLvq-jIkSeTUZ6QgYYO3MwG9EMqC-KoLXA"
+            <a href="https://github.com/rafarc97/JavaScript/tree/master/Projects/JavaScriptGames/MemoryGame"
                 target="_blank" rel="noopener">
                 <img src="../assets/img/pokemon.png"
                     alt="Memory Pokemon Game" loading="lazy" class="img-project">
@@ -208,7 +208,7 @@
                 <h3>Memory Pokemon</h3>
                 <p>Juego de pokemons realizado en <i>Vanilla Javascript</i>.</p>
                 <p class="text-right">
-                    <a href="" target="_blank" rel="noopener">
+                    <a href="https://github.com/rafarc97/JavaScript/tree/master/Projects/JavaScriptGames/MemoryGame" target="_blank" rel="noopener">
                         Códigos del proyecto
                     </a>
                 </p>
@@ -216,7 +216,7 @@
         </article>
 
         <article class="project">
-            <a href="https://www.youtube.com/playlist?list=PLvq-jIkSeTUZ6QgYYO3MwG9EMqC-KoLXA"
+            <a href="https://github.com/rafarc97/JavaScript/tree/master/Projects/JavaScriptGames/Snake"
                 target="_blank" rel="noopener">
                 <img src="../assets/img/snake.png"
                     alt="Snake" loading="lazy" class="img-project">
@@ -225,7 +225,7 @@
                 <h3>Snake</h3>
                 <p>El famoso juego Snake desarrollado en <i>Vanilla Javascript</i>.</p>
                 <p class="text-right">
-                    <a href="" target="_blank" rel="noopener">
+                    <a href="https://github.com/rafarc97/JavaScript/tree/master/Projects/JavaScriptGames/Snake" target="_blank" rel="noopener">
                         Códigos del proyecto
                     </a>
                 </p>
@@ -233,7 +233,7 @@
         </article>
 
         <article class="project">
-            <a href="https://www.youtube.com/playlist?list=PLvq-jIkSeTUZ6QgYYO3MwG9EMqC-KoLXA"
+            <a href="https://github.com/rafarc97/smallProjects/tree/master/APIRestBottle"
                 target="_blank" rel="noopener">
                 <img src="../assets/img/python.png"
                     alt="Administrador habitaciones Hotel" loading="lazy" class="img-project">
@@ -242,7 +242,7 @@
                 <h3>Esihotel</h3>
                 <p>Aplicación de Escritorio para aministrador las habitaciones de tu hotel desarrollado con <i>Python</i> y <i>MySQLite</i>.</p>
                 <p class="text-right">
-                    <a href="" target="_blank" rel="noopener">
+                    <a href="https://github.com/rafarc97/smallProjects/tree/master/APIRestBottle" target="_blank" rel="noopener">
                         Códigos del proyecto
                     </a>
                 </p>
@@ -250,7 +250,7 @@
         </article>
 
         <article class="project">
-            <a href="https://www.youtube.com/playlist?list=PLvq-jIkSeTUZ6QgYYO3MwG9EMqC-KoLXA"
+            <a href="https://github.com/rafarc97/smallProjects/tree/master/ESIzon"
                 target="_blank" rel="noopener">
                 <img src="../assets/img/esizon.png"
                     alt="Tienda Online" loading="lazy" class="img-project">
@@ -259,7 +259,7 @@
                 <h3>Esizon</h3>
                 <p>Proyecto de Universidad: Tienda Online desarrollada en lenguaje de programación <i>C</i>.</p>
                 <p class="text-right">
-                    <a href="" target="_blank" rel="noopener">
+                    <a href="https://github.com/rafarc97/smallProjects/tree/master/ESIzon" target="_blank" rel="noopener">
                         Códigos del proyecto
                     </a>
                 </p>
