Border header arreglado sin hr

--- a/ahora/ahora.html
+++ b/ahora/ahora.html
@@ -29,7 +29,7 @@
 <body>
 
     <!-- Header -->
-    <header class="header">
+    <header class="header border-header">
 
         <h2 class="logo">
             <a class="logo_a" href="../index.html">
@@ -47,7 +47,6 @@
 
     </header>
 
-    <hr>
 
 
     <article class="ahora">
