--- a/contacto/contacto.html
+++ b/contacto/contacto.html
@@ -29,7 +29,7 @@
 <body>
 
   <!-- Header -->
-  <header class="header">
+  <header class="header border-header">
 
     <h2 class="logo">
       <a class="logo_a" href="../index.html">
@@ -46,8 +46,6 @@
     </nav>
 
   </header>
-
-  <hr>
 
 
   <div class="form-container">
