--- a/cv/cv.html
+++ b/cv/cv.html
@@ -33,7 +33,7 @@
   <body>
     
     <!-- Header -->
-    <header class="header">
+    <header class="header border-header">
 
         <h2 class="logo">
             <a class="logo_a" href="../index.html">
@@ -51,7 +51,6 @@
 
     </header>
 
-    <hr>
 
     <section>
         <nav class="cv-index text-center">
