--- a/proyectos/proyectos.html
+++ b/proyectos/proyectos.html
@@ -28,7 +28,7 @@
 <body>
 
     <!-- Header -->
-    <header class="header">
+    <header class="header border-header">
 
         <h2 class="logo">
             <a class="logo_a" href="../index.html">
@@ -45,8 +45,6 @@
         </nav>
 
     </header>
-
-    <hr>
 
     <article class="container projects-category">
         <h1>Mis Proyectos</h1>
